[package]
name = "order_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_os = "linux")']
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
dotenvy = "0.15.7"
