[package]
name = "order_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
directories = "6.0.0"
surrealdb = { version = "3.0.0-rc.1", default-features = false, features = ["protocol-ws"] }
surrealdb-types = "3.0.0-rc.1"
# [target.'cfg(target_os = "linux")']
openssl = { version = "0.10", features = ["vendored"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }

[build-dependencies]
dotenvy = "0.15.7"
