[package]
name = "order_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["fullstack"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }

# Server-only deps (not WASM-compatible)
tokio = { version = "1", features = ["full"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
surrealdb = { version = "3.0.0-rc.1", default-features = false, features = ["protocol-ws"], optional = true }
surrealdb-types = { version = "3.0.0-rc.1", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
directories = { version = "6.0.0", optional = true }
dotenvy = { version = "0.15.7", optional = true }

[features]
default = []
server = ["dioxus/server", "dep:tokio", "dep:reqwest", "dep:surrealdb", "dep:surrealdb-types", "dep:openssl", "dep:directories", "dep:dotenvy"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]

[build-dependencies]
dotenvy = "0.15.7"
